build(deps): Update dependencies (#1639)